--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/redux-observable/redux-observable#readme",
   "dependencies": {
     "history": "^2.1.2",
+    "jest": "^18.1.0",
     "jquery": "^3.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -33,7 +34,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "webpack": "^1.13.1",
